feat: Add individual file access for public snippets  (#48)
